@@ -3,24 +3,31 @@ description: "Uploads the package from the dist dir to GitHub artifacts or Googl
 inputs:
   use_github:
     description: "Whether to upload to GitHub artifacts"
+    required: true
 
   use_gdrive:
     description: "Whether to upload to Google Drive"
+    required: true
 
   github-target-filename:
     description: "Filename to upload (GitHub artifacts)"
+    required: true
 
   gdrive-target-base-dir:
     description: "Base directory to upload (Google Drive)"
+    required: true
 
   gdrive-secret-key:
     description: "Google Drive secret key"
+    required: true
 
   gdrive-parent-folder-id:
     description: "Google Drive parent folder ID"
+    required: true
 
   package-version:
     description: "Package version appended to the Google Drive dir"
+    required: true
 
 runs:
   using: "composite"
@@ -44,16 +51,16 @@ runs:
         echo "SHORT_VERSION=$SHORT_VERSION" >> $GITHUB_ENV
       shell: bash
 
-    # Upload to GitHub
-    - if: ${{ inputs.use_github == 'true' }}
+    - name: Upload to GitHub
+      if: ${{ inputs.use_github == 'true' }}
       uses: actions/upload-artifact@v4
       with:
         name: ${{ inputs.github-target-filename }}
         path: ./dist
         retention-days: 3
 
-    # Upload to Google Drive
-    - if: ${{ inputs.use_gdrive == 'true' }}
+    - name: Upload to Google Drive
+      if: ${{ inputs.use_gdrive == 'true' }}
       uses: symless/gdrive-upload@target-glob
       with:
         credentials: ${{ inputs.gdrive-secret-key }}
