@@ -2,8 +2,8 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "type": "cmake",
       "label": "build",
+      "type": "cmake",
       "command": "build",
       "targets": ["all"],
       "preset": "${command:cmake.activeBuildPresetName}",
@@ -13,23 +13,40 @@
       }
     },
     {
-      "type": "cmake",
       "label": "clean",
+      "type": "cmake",
       "command": "build",
       "targets": ["clean"],
       "preset": "${command:cmake.activeBuildPresetName}",
       "group": "build"
     },
     {
-      "label": "reinstall windows daemon",
+      "label": "tests",
+      "dependsOn": ["unittests", "integtests"],
+      "problemMatcher": []
+    },
+    {
+      "label": "kill",
       "type": "shell",
-      "command": "python scripts/windows_daemon.py",
-      "dependsOn": ["build"]
+      "command": "killall synergy; killall synergyc; killall synergys || true",
+      "windows": {
+        "command": "taskkill /F /IM synergy.exe /IM synergyc.exe /IM synergys.exe; $true"
+      }
+    },
+    {
+      "label": "build-kill",
+      "dependsOn": ["build", "kill"]
     },
     {
       "label": "gui",
       "type": "process",
       "command": "${workspaceFolder}/build/bin/synergy",
+      "dependsOn": ["build", "kill"]
+    },
+    {
+      "label": "windows daemon",
+      "type": "shell",
+      "command": "python scripts/windows_daemon.py",
       "dependsOn": ["build"]
     },
     {
@@ -37,7 +54,7 @@
       "type": "shell",
       "command": "find . -name '*.gcda' -delete",
       "windows": {
-        "command": "$null" // no-op
+        "command": "$null"
       },
       "presentation": {
         "reveal": "silent"
@@ -68,14 +85,14 @@
       "dependsOn": ["build", "clean-gcda"]
     },
     {
-      "label": "unittests (all)",
+      "label": "unittests",
       "type": "shell",
       "command": "python",
       "args": ["./scripts/tests.py", "--unit-tests", "--ignore-return-code"],
       "dependsOn": ["build", "clean-gcda"]
     },
     {
-      "label": "integtests (all)",
+      "label": "integtests",
       "type": "shell",
       "command": "python",
       "args": ["./scripts/tests.py", "--integ-tests", "--ignore-return-code"],
